# Monopoly

./: main.py  pyproject.toml  references.txt
